margin bottom set of icons

--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@
                                                     </form>
                                                 </div>
                                             </div>
-                                            <div class="col-md-6">
-                                                <div class="contact-info">
+                                            <div class="col-md-6 mb-4">
+                                                <div class="contact-info mb-4">
                                                     <div class="contact-info-item">
                                                         <h3>Email</h3>
                                                         <p>digambarchaudhari425303@gmail.com</p>
