fix some bug make screen responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Digambar's Portfolio</title>
+
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
     <!-- CSS only -->
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
@@ -547,39 +549,7 @@
     <script type="module" src="assets/vendores/numbers/script.js"></script>
     <script src="assets/js/main.js"></script>
 
-    <!-- Profile Vendore -->
-    <script src="assets/vendores/profile/script.js"></script>
-    <!-- Profile Vendore -->
 </body>
 
 </html>
 
-
-
-<!-- Important -->
-
-
-<!-- <div class="col-6 border">
-    <div class="d-flex align-items-center  justify-content-center">
-
-        <div>
-            <div id="logo">
-                <img style="height: 252px;"
-                    src="https://www.directive.com/images/easyblog_shared/July_2018/7-4-18/b2ap3_large_totw_network_profile_400.jpg"
-                    alt="">
-            </div>
-
-            <div id="circle1">
-                <div id="inner-cirlce1">
-
-                    <h2></h2>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-</div> -->
-
-
-<!-- Important -->
