--- a/index.html
+++ b/index.html
@@ -477,14 +477,14 @@
 
                                     <!-- Contact Us -->
                                     <div class="carousel-item">
-                                        <section id="Work" class="slide3 about-section sec-padding  animate__animated">
+                                        <section id="Contact" class="slide3 about-section sec-padding  animate__animated">
                                             <div class="row">
                                                 <div class="section-title">
                                                     <h1 class="text-center mb-4">Contact Us</h1>
                                                 </div>
                                             </div>
 
-                                            <div class="row mt-4 custom-scroll"
+                                            <div class="row mt-4 custom-scroll ContactSection"
                                                 style="overflow-y:scroll; overflow-x:hidden; height:480px;">
                                                 <div class="col-md-6">
                                                     <div class="contact-form">
