--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Digambar's Portfolio</title>
 
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
@@ -27,16 +28,19 @@
 
 <body>
 
-
+    <div id="particles-js"></div>
     <div id="loader">
         <div id="shadow"></div>
         <div id="box"></div>
     </div>
 
-    <!-- <canvas id="c"></canvas> -->
+
+
 
     <div class="main" id="main" hidden>
-        <canvas id="canvas" class="animate__animated animate__fadeIn"></canvas>
+        <!-- <canvas id="canvas" class="animate__animated animate__fadeIn"></canvas> -->
+
+
         <div class="container-fluid">
             <div class="mask mask-custom">
 
@@ -59,12 +63,14 @@
                                             <li><a role="button" data-mdb-target="#carouselExampleTouch"
                                                     data-mdb-slide-to="0" class="active-nav HomeBtn" aria-current="true"
                                                     aria-label="Slide 1" onclick="Display('HomeBtn','1')">home</a></li>
-                                            <li><a role="button" class="li-btn AboutBtn" data-mdb-target="#carouselExampleTouch"
-                                                    data-mdb-slide-to="1" aria-label="Slide 2"
-                                                    onclick="Display('AboutBtn','2')">about</a></li>
-                                            <li><a role="button" class="li-btn WorkBtn" data-mdb-target="#carouselExampleTouch"
-                                                    data-mdb-slide-to="2" aria-label="Slide 3"
-                                                    onclick="Display('WorkBtn', '3')">Work</a></li>
+                                            <li><a role="button" class="li-btn AboutBtn"
+                                                    data-mdb-target="#carouselExampleTouch" data-mdb-slide-to="1"
+                                                    aria-label="Slide 2" onclick="Display('AboutBtn','2')">about</a>
+                                            </li>
+                                            <li><a role="button" class="li-btn WorkBtn"
+                                                    data-mdb-target="#carouselExampleTouch" data-mdb-slide-to="2"
+                                                    aria-label="Slide 3" onclick="Display('WorkBtn', '3')">Work</a>
+                                            </li>
                                             <li><a role="button" data-mdb-target="#carouselExampleTouch"
                                                     data-mdb-slide-to="3" aria-label="Slide 4" class="li-btn ContactBtn"
                                                     onclick="Display('ContactBtn', '4')">Contact</a></li>
@@ -94,7 +100,8 @@
                                                                     class="desc d-flex justify-content-center align-items-center">
                                                                     <div class="ml-4 info-contain">
                                                                         <p class="text-light">Hello, I'm</p>
-                                                                        <h1 class="text-light">Digambar Chaudhari</h1>
+                                                                        <h1 class="text-light">Digambar Chaudhari
+                                                                        </h1>
                                                                         <h2 class="mt-4"><span is="type-async"
                                                                                 id="type-text"></span>
                                                                             <span class="blinking-cursor">_</span>
@@ -158,7 +165,8 @@
                                                 <div class="col-md-7 col-sm-12 order-1 order-md-2 abountInfo about-text custom-scroll"
                                                     id="style-4"
                                                     style="overflow-y:scroll; overflow-x:hidden; height:460px;">
-                                                    <p>I’m a Fullstack Developer located in Jalgaon. I have a serious
+                                                    <p>I’m a Fullstack Developer located in Jalgaon. I have a
+                                                        serious
                                                         passion for UI
                                                         effects, animations and
                                                         creating intuitive, dynamic user experiences.
@@ -193,21 +201,26 @@
                                                         <div class="timeline">
                                                             <div class="timeline-item">
                                                                 <span class="date">12/2021 -present</span>
-                                                                <h4>bachelor of engineering - <span>SSBT's COET</span>
+                                                                <h4>bachelor of engineering - <span>SSBT's
+                                                                        COET</span>
                                                                 </h4>
-                                                                <p>Currently I am, pursuing BE from Kavayitri Bahinabai
+                                                                <p>Currently I am, pursuing BE from Kavayitri
+                                                                    Bahinabai
                                                                     Chaudhari North
                                                                     Maharashtra University, (Jalgaon) my
-                                                                    recent CGPA is <strong>9.25</strong> in summer 2022
+                                                                    recent CGPA is <strong>9.25</strong> in summer
+                                                                    2022
                                                                     exam
                                                                 </p>
                                                             </div>
 
                                                             <div class="timeline-item">
                                                                 <span class="date">08/2018 - 05/2021</span>
-                                                                <h4>Diploma - <span>SSP Institute of technology</span>
+                                                                <h4>Diploma - <span>SSP Institute of
+                                                                        technology</span>
                                                                 </h4>
-                                                                <p>I have done my diploma in computer engineering from
+                                                                <p>I have done my diploma in computer engineering
+                                                                    from
                                                                     Maharashtra State
                                                                     Board of Technical Education,
                                                                     (Mumbai) with <strong>92.51</strong> percent</p>
@@ -215,7 +228,8 @@
                                                             <div class="timeline-item">
                                                                 <span class="date">07/2012 - 05/2018</span>
                                                                 <h4>SSC - <span>Nutan Dnyan Mandir</span></h4>
-                                                                <p>I have completed my <span>SSC</span> from Maharashtra
+                                                                <p>I have completed my <span>SSC</span> from
+                                                                    Maharashtra
                                                                     State Board of
                                                                     Secondary and Higher Secondary
                                                                     Education, (Pune) with <strong>87.20</strong>
@@ -238,13 +252,17 @@
                                                                 <p>The Aapliweb is the digital marketing Agency in
                                                                     Jalgaon
                                                                     providing web
-                                                                    development and all other digital activities.</p>
+                                                                    development and all other digital activities.
+                                                                </p>
                                                             </div>
                                                             <div class="timeline-item">
                                                                 <span class="date">1 day </span>
-                                                                <h4>Microsoft AI Classroom Seminar - <span>Futureskill
-                                                                        Prime</span></h4>
-                                                                <p>This is a one day training course on Microsoft Azure,
+                                                                <h4>Microsoft AI Classroom Seminar -
+                                                                    <span>Futureskill
+                                                                        Prime</span>
+                                                                </h4>
+                                                                <p>This is a one day training course on Microsoft
+                                                                    Azure,
                                                                     here we learn
                                                                     how
                                                                     to make chat bot and deploy it on telegram</p>
@@ -392,7 +410,8 @@
                                                                 <h1 class="sciheading">Productivity Extention
                                                                 </h1>
                                                                 <p class="info">By using this extension you can hide
-                                                                    distracting content like YouTube home page videos to
+                                                                    distracting content like YouTube home page
+                                                                    videos to
                                                                     increase Productivity.</p>
 
                                                             </div>
@@ -452,9 +471,11 @@
                                                                 </div>
                                                                 <h1 class="sciheading">Store Website
                                                                 </h1>
-                                                                <p class="info">This is a simple bakery store website
+                                                                <p class="info">This is a simple bakery store
+                                                                    website
                                                                     design
-                                                                    just using html, css, and javascript. Here user can
+                                                                    just using html, css, and javascript. Here user
+                                                                    can
                                                                     place order and he/she get emails </p>
 
                                                             </div>
@@ -477,7 +498,8 @@
 
                                     <!-- Contact Us -->
                                     <div class="carousel-item">
-                                        <section id="Contact" class="slide3 about-section sec-padding  animate__animated">
+                                        <section id="Contact"
+                                            class="slide3 about-section sec-padding  animate__animated">
                                             <div class="row">
                                                 <div class="section-title">
                                                     <h1 class="text-center mb-4">Contact Us</h1>
@@ -566,8 +588,6 @@
                         </div>
 
 
-
-
                         <div id="BottomNav" class="navigation text-center fixed-bottom mb-4">
                             <ul>
                                 <li id="HomeBtn" class="li-glow li-btn  HomeBtn" data-mdb-target="#carouselExampleTouch"
@@ -575,13 +595,16 @@
                                     onclick="Display('HomeBtn' ,'1')"></li>
 
                                 <li id="AboutBtn" class="li-btn AboutBtn" data-mdb-target="#carouselExampleTouch"
-                                    data-mdb-slide-to="1" aria-label="Slide 2" onclick="Display('AboutBtn','2')"></li>
+                                    data-mdb-slide-to="1" aria-label="Slide 2" onclick="Display('AboutBtn','2')">
+                                </li>
 
                                 <li id="WorkBtn" class="li-btn WorkBtn" data-mdb-target="#carouselExampleTouch"
-                                    data-mdb-slide-to="2" aria-label="Slide 3" onclick="Display('WorkBtn', '3')"></li>
+                                    data-mdb-slide-to="2" aria-label="Slide 3" onclick="Display('WorkBtn', '3')">
+                                </li>
 
                                 <li id="ContactBtn" data-mdb-target="#carouselExampleTouch" data-mdb-slide-to="3"
-                                    aria-label="Slide 4" class="li-btn ContactBtn" onclick="Display('ContactBtn', '4')"></li>
+                                    aria-label="Slide 4" class="li-btn ContactBtn" onclick="Display('ContactBtn', '4')">
+                                </li>
                                 <!-- <li id=""></li> -->
                             </ul>
                         </div>
@@ -594,14 +617,16 @@
             </div>
         </div>
 
-
     </div>
+
     </div>
 
 
     <!-- MDB -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="assets/vendores/particle/particles.js"></script>
+    <script src="assets/vendores/particle/app.js"></script>
     <script type="module" src="assets/vendores/numbers/script.js"></script>
     <script src="assets/js/main.js"></script>
 
