--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                                                 <div class="dp d-flex justify-content-center">
                                                                     <div class="dp-arc-outer"></div>
                                                                     <div class="dp-arc-inner"></div>
-                                                                    <img class="ripple" src="assets/img/resume.png">
+                                                                    <img class="ripple" src="assets/img/profile.png">
                                                                 </div>
                                                             </div>
 
