--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                                                         </div>
                                                         <div class="contact-info-item">
                                                             <h3>Phone</h3>
-                                                            <p>+91 7620464305</p>
+                                                            <p>+91 XXXXXXXXXX</p>
                                                         </div>
                                                         <div class="contact-info-item">
                                                             <h3 class="social-icons">Follow me</h3>
